# icmc-cg

./: CMakeLists.txt  README.md  projeto_1.cpp  projeto_3.cpp  scene.txt
assets/shaders/: camera.frag  camera.vert  model.frag  model.vert
cpp_src/: CMakeLists.txt  cg_mat4.cpp  cg_mat4.hpp  cg_mesh.cpp  cg_mesh.hpp  cg_model.cpp  cg_model.hpp  cg_utils.cpp  cg_utils.hpp  cg_window.cpp  cg_window.hpp  cg_windvane.cpp  cg_windvane.hpp
